--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@mui/material": "^5.14.2",
+    "@mui/x-charts": "^6.0.0-alpha.12",
     "@types/node": "^20.2.5",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
